# payload-dumper-go

./: .gitignore  AGENTS.md  README.md  go.mod  go.sum  justfile  main.go  main_test.go  payload.go  payload_extract_branches_test.go  payload_integration_test.go  payload_more_test.go  payload_test.go  reader_test.go  ui.go
.github/workflows/: build.yml  goreleaser.yml
scripts/: README.md  README.zh.md  pyproject.toml
scripts/src/payload_gen/: __init__.py  __main__.py  delta_generator.py  main.py  payload_format.py  project.py  proto_codegen.py  sample_generator.py
